--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bounce Market</title>
+    <title>Fangible</title>
   </head>
   <body>
     <noscript>market.bounce.finance</noscript>
