optimzed SEO search desc

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Fangible</title>
+    <meta name="description" content="Fangible is a decentralized social media platform where Fans can seamlessly mint, purchase, sell, and trade NFTs. Fangible's experience-driven ecosystem allows creators to design collections, showcase profiles, collaborate, and earn royalties for their work. Come browse a wide selection of NFTs from your favorite artists, athletes, and celebrities!">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
