--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet" href="/css/animate.min.css">
     <script async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"></script>
   </body>
 </html>
