fix: LinkBtn style

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <link rel="stylesheet" href="/css/animate.min.css">
-    <script async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"></script>
+    <script defer async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"></script>
   </body>
 </html>
