--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="referrer" content="no-referrer" />
-    <meta
-      name="description"
-      content="Welcome to Fangible!"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="referrer" content="no-referrer" />
+  <meta name="description" content="Welcome to Fangible!" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -25,13 +23,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fangible</title>
-    <meta name="description" content="Fangible is a decentralized social media platform where Fans can seamlessly mint, purchase, sell, and trade NFTs. Fangible's experience-driven ecosystem allows creators to design collections, showcase profiles, collaborate, and earn royalties for their work. Come browse a wide selection of NFTs from your favorite artists, athletes, and celebrities!">
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Fangible</title>
+  <meta name="description"
+    content="Fangible is a decentralized social media platform where Fans can seamlessly mint, purchase, sell, and trade NFTs. Fangible's experience-driven ecosystem allows creators to design collections, showcase profiles, collaborate, and earn royalties for their work. Come browse a wide selection of NFTs from your favorite artists, athletes, and celebrities!">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-216837687-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-216837687-1');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -41,7 +54,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <link rel="stylesheet" href="/css/animate.min.css">
-    <script defer async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"></script>
-  </body>
+  <link rel="stylesheet" href="/css/animate.min.css">
+  <script defer async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342">
+  </script>
+</body>
+
 </html>
