fix: bind box bugs

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="referrer" content="no-referrer" />
-    <meta
-      name="description"
-      content="Welcome to Fangible!"
-    />
+    <meta name="description" content="Welcome to MetaApes!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,8 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fangible</title>
-    <meta name="description" content="Fangible is a decentralized social media platform where Fans can seamlessly mint, purchase, sell, and trade NFTs. Fangible's experience-driven ecosystem allows creators to design collections, showcase profiles, collaborate, and earn royalties for their work. Come browse a wide selection of NFTs from your favorite artists, athletes, and celebrities!">
+    <title>MetaApes</title>
+    <meta
+      name="description"
+      content="MetaApes is a decentralized social media platform where Fans can seamlessly mint, purchase, sell, and trade NFTs. MetaApes's experience-driven ecosystem allows creators to design collections, showcase profiles, collaborate, and earn royalties for their work. Come browse a wide selection of NFTs from your favorite artists, athletes, and celebrities!"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,7 +41,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <link rel="stylesheet" href="/css/animate.min.css">
-    <script defer async type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"></script>
+    <link rel="stylesheet" href="/css/animate.min.css" />
+    <script
+      defer
+      async
+      type="text/javascript"
+      src="https://s4.cnzz.com/z_stat.php?id=1280115342&web_id=1280115342"
+    ></script>
   </body>
 </html>
